--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,1 +1,10 @@
 /*  */
+
+.about {
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 28px;
+}
+
+/* "width:80%;text-align:center;margin:0 auto;margin-top:28px;" */
