--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,6 +5,7 @@
   text-align: center;
   margin: 0 auto;
   margin-top: 28px;
+  color:rgb(252,183,4)
 }
 
 /* "width:80%;text-align:center;margin:0 auto;margin-top:28px;" */
