--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,1 +1,15 @@
 /*  */
+
+.navbar {
+  width: 100%;
+}
+
+
+
+ .nav {
+   background-color:rgb(37,36,36);
+ }
+
+ .navbar-brand, .nav-item, .nav-link {
+   color: white;
+ }
