--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,14 +2,17 @@
 
 .navbar {
   width: 100%;
+  background-color:rgb(37,36,36);
 }
 
 
 
- .nav {
+ /* .nav {
    background-color:rgb(37,36,36);
- }
+ } */
 
- .navbar-brand, .nav-item, .nav-link {
+ .navbar-brand {
    color: white;
  }
+
+ 
