--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url("https://i.imgur.com/E3bgUa7.jpg");
+  /* background-repeat: repeat-x; */
+  background-size: contain;
 }
