--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,1 +1,53 @@
 /*  */
+
+.align-items-center {
+
+   height:700px;
+   width:80%;
+   margin:0 auto;
+
+}
+
+h1 {
+  text-align:center;
+  color:white;
+
+}
+
+.skilldiv {
+   height:600px;
+   float:none;
+   /*text-align:center;*/
+}
+.float-left {
+
+   width:33%;
+   height:150px;
+   padding:0px;/*text-align:center;*//*margin:0 auto;*/
+
+}
+
+.progress {
+
+  width:80%;
+  height: 25px;
+  margin-right:0px;
+  margin-top:51px;
+  padding-bottom:0px;
+  margin-bottom:10px;
+  background-color:#f9f9f9;
+
+}
+
+.progress-bar {
+   width: 50%;
+   background-color: #EF5646;
+}
+
+h4 {
+
+   text-align:center;
+   color:white;
+   padding:0px;
+   margin-top:0px;
+}
