--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,1 +1,41 @@
 /*  */
+
+.name {
+  color:#EF5646;
+}
+
+h2, p {
+  color:white;
+}
+
+.projects-clean .projects,.projects-horizontal .projects{padding-bottom:40px}
+
+.projects-clean{color:#313437;}
+
+.projects-clean p{color:#7d8285}
+
+.projects-clean h2{font-weight:700;margin-bottom:40px;padding-top:40px;color:#EF5646}@media (max-width:767px){.projects-clean h2{margin-bottom:25px;padding-top:25px;font-size:24px;color: white}}
+
+.projects-clean .intro{font-size:16px;max-width:500px;margin:0 auto}
+
+.projects-clean .intro p{margin-bottom:0}
+
+.projects-clean .item{text-align:center;padding-top:50px;min-height:425px}
+
+.projects-clean .item .name{font-weight:700;margin-top:28px;margin-bottom:8px;color:inherit}
+
+.projects-clean .item .description{font-size:15px;margin-top:15px;margin-bottom:0}
+
+.projects-horizontal{color:#313437}
+
+.projects-horizontal p{color:#7d8285}
+
+.projects-horizontal h2{font-weight:700;margin-bottom:40px;padding-top:40px;color:#EF5646}@media (max-width:767px){.projects-horizontal h2{margin-bottom:25px;padding-top:25px;font-size:24px}}
+
+.projects-horizontal .intro{font-size:16px;max-width:500px;margin:0 auto 10px}
+
+.projects-horizontal .item{padding-top:60px;min-height:160px}@media (max-width:767px){.projects-horizontal .item{padding-top:40px;min-height:160px}}
+
+.projects-horizontal .item .name{font-size:18px;font-weight:700;margin-top:10px;margin-bottom:15px;color:inherit}@media (max-width:991px){.projects-horizontal .item .name{margin-top:22px}}
+
+.projects-horizontal .item .description{font-size:15px;margin-bottom:0};
