--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -4,8 +4,12 @@
   color:#EF5646;
 }
 
-h2, p {
+ p {
   color:white;
+}
+
+h2 {
+  color:##EF5646
 }
 
 .projects-clean .projects,.projects-horizontal .projects{padding-bottom:40px}
@@ -26,11 +30,11 @@ h2, p {
 
 .projects-clean .item .description{font-size:15px;margin-top:15px;margin-bottom:0}
 
-.projects-horizontal{color:#313437}
+.projects-horizontal{color:#313437; width: 80%; text-align: center; margin: 0 auto}
 
-.projects-horizontal p{color:#7d8285}
+.projects-horizontal {color:#7d8285}
 
-.projects-horizontal h2{font-weight:700;margin-bottom:40px;padding-top:40px;color:#EF5646}@media (max-width:767px){.projects-horizontal h2{margin-bottom:25px;padding-top:25px;font-size:24px}}
+.projects-horizontal {font-weight:700;margin-bottom:40px;padding-top:40px;color:#EF5646}@media (max-width:767px){.projects-horizontal h2{margin-bottom:25px;padding-top:25px;font-size:24px}}
 
 .projects-horizontal .intro{font-size:16px;max-width:500px;margin:0 auto 10px}
 
