--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -2,13 +2,13 @@
 
 .align-items-center {
 
-   height:700px;
+   height:915px;
    width:80%;
    margin:0 auto;
 
 }
 
-h1 {
+h1, p {
   text-align:center;
   color:white;
 
